updated REST API guide example files with upstream content

--- a/doc-Red_Hat_CloudForms_REST_API/chap-Examples.adoc
+++ b/doc-Red_Hat_CloudForms_REST_API/chap-Examples.adoc
@@ -14,7 +14,7 @@ include::topics/Queries.adoc[]
 
 
 :leveloffset: 3
-include::topics/Paging_Queries.adoc[]
+include::topics/paging_queries.adoc[]
 
 
 :leveloffset: 3
@@ -28,23 +28,23 @@ include::topics/Querying_a_Delete_Task.adoc[]
 This section provides examples of how to interact with service catalogs. 
 
 :leveloffset: 3
-include::topics/Adding_a_Sample_Service_Catalog.adoc[]
+include::topics/add_service_catalog.adoc[]
 
 
 :leveloffset: 3
-include::topics/Adding_Multiple_Service_Catalogs.adoc[]
+include::topics/add_service_catalogs.adoc[]
 
 
 :leveloffset: 3
-include::topics/Assign_Service_Templates_to_Service_Catalogs.adoc[]
+include::topics/assign_service_templates.adoc[]
 
 
 :leveloffset: 3
-include::topics/Edit_a_Service_Catalog.adoc[]
+include::topics/edit_service_catalog.adoc[]
 
 
 :leveloffset: 3
-include::topics/Edit_Multiple_Service_Catalogs.adoc[]
+include::topics/edit_service_catalogs.adoc[]
 
 
 :leveloffset: 3
@@ -56,11 +56,11 @@ include::topics/Order_Multiple_Services_from_a_Service_Catalog.adoc[]
 
 
 :leveloffset: 3
-include::topics/Unassign_Service_Templates_from_a_Service_Catalog.adoc[]
+include::topics/unassign_service_templates.adoc[]
 
 
 :leveloffset: 3
-include::topics/Delete_Multiple_Service_Catalogs.adoc[]
+include::topics/delete_service_catalogs.adoc[]
 
 
 :leveloffset: 2
@@ -70,7 +70,7 @@ include::topics/Delete_Multiple_Service_Catalogs.adoc[]
 This section provides examples of how to interact with tags. 
 
 :leveloffset: 3
-include::topics/Assign_Tags_to_a_Service.adoc[]
+include::topics/assign_tags.adoc[]
 
 
 :leveloffset: 3
@@ -82,15 +82,14 @@ include::topics/Assign_a_Tag_by_Reference_to_a_Service.adoc[]
 
 
 :leveloffset: 3
-include::topics/Assign_Tags_to_a_Service_Template.adoc[]
+include::topics/assign_tags_to_service_template.adoc[] 
+
+:leveloffset: 3
+include::topics/unassign_tags.adoc[]
 
 
 :leveloffset: 3
-include::topics/Unassign_Tags.adoc[]
-
-
-:leveloffset: 3
-include::topics/Unassign_Tags_from_a_Service_Template.adoc[]
+include::topics/unassign_tags_from_service_template.adoc[]
 
 
 :leveloffset: 2
@@ -98,13 +97,6 @@ include::topics/Unassign_Tags_from_a_Service_Template.adoc[]
 = Automation Requests
 
 This section provides examples of how to interact with automation requests. 
-
-:leveloffset: 3
-include::topics/Trigger_a_Single_Automation_Request.adoc[]
-
-
-:leveloffset: 3
-include::topics/Trigger_Multiple_Automation_Requests.adoc[]
 
 
 :leveloffset: 2
@@ -114,11 +106,10 @@ include::topics/Trigger_Multiple_Automation_Requests.adoc[]
 This section provides examples of how to interact with provisioning requests. 
 
 :leveloffset: 3
-include::topics/Trigger_a_Single_Provisioning_Request.adoc[]
-
+include::topics/automation_request.adoc[]
 
 :leveloffset: 3
-include::topics/Trigger_Multipe_Provisioning_Requests.adoc[]
+include::topics/automation_requests.adoc[]
 
 
 :leveloffset: 2
@@ -128,23 +119,23 @@ include::topics/Trigger_Multipe_Provisioning_Requests.adoc[]
 This section provides examples of how to interact with providers. 
 
 :leveloffset: 3
-include::topics/Create_a_Provider.adoc[]
+include::topics/create_provider.adoc[]
 
 
 :leveloffset: 3
-include::topics/Create_a_Provider_with_Compound_Credentials.adoc[]
+include::topics/create_provider_compound_credentials.adoc[]
 
 
 :leveloffset: 3
-include::topics/Refresh_a_Provider.adoc[]
+include::topics/refresh_provider.adoc[]
 
 
 :leveloffset: 3
-include::topics/Update_a_Provider.adoc[]
+include::topics/update_provider.adoc[]
 
 
 :leveloffset: 3
-include::topics/Delete_a_Provider.adoc[]
+include::topics/delete_provider.adoc[]
 
 
 :leveloffset: 3
@@ -158,31 +149,32 @@ include::topics/Deleting_Multiple_Providers.adoc[]
 This section provides examples of how to interact with services. 
 
 :leveloffset: 3
-include::topics/Edit_a_Service.adoc[]
+include::topics/edit_service.adoc[]
 
 
 :leveloffset: 3
-include::topics/Edit_Multiple_Services.adoc[]
+include::topics/edit_services.adoc[]
 
 
 :leveloffset: 3
-include::topics/Edit_a_Service_via_a_PATCH_Request.adoc[]
+include::topics/edit_service_via_patch.adoc[]
 
 
 :leveloffset: 3
-include::topics/Edit_a_Service_via_a_PUT_Request.adoc[]
+include::topics/edit_service_via_put.adoc[]
 
-
-:leveloffset: 3
-include::topics/Retire_a_Service.adoc[]
 
 
 :leveloffset: 3
-include::topics/Retire_Multiple_Services.adoc[]
+include::topics/retire_service.adoc[]
 
 
 :leveloffset: 3
-include::topics/Delete_Services.adoc[]
+include::topics/retire_services.adoc[]
+
+
+:leveloffset: 3
+include::topics/delete_services.adoc[]
 
 
 :leveloffset: 2
@@ -192,35 +184,35 @@ include::topics/Delete_Services.adoc[]
 This section provides examples of how to interact with virtual machines. 
 
 :leveloffset: 3
-include::topics/Scan_a_Virtual_Machine.adoc[]
+include::topics/scan_vm.adoc[]
 
 
 :leveloffset: 3
-include::topics/Set_the_Owner_of_a_Virtual_Machine.adoc[]
+include::topics/set_owner_vm.adoc[]
 
 
 :leveloffset: 3
-include::topics/Add_Event.adoc[]
+include::topics/add_event_vm.adoc[]
 
 
 :leveloffset: 3
-include::topics/Add_a_Lifecycle_Event_to_a_Virtual_Machine.adoc[]
+include::topics/add_lifecycle_event_vm.adoc[]
 
 
 :leveloffset: 3
-include::topics/Start_a_Virtual_Machine.adoc[]
+include::topics/start_vm.adoc[]
 
 
 :leveloffset: 3
-include::topics/Stop_a_Virtual_Machine.adoc[]
+include::topics/stop_vm.adoc[]
 
 
 :leveloffset: 3
-include::topics/Suspend_a_Virtual_Machine.adoc[]
+include::topics/suspend_vm.adoc[]
 
 
 :leveloffset: 3
-include::topics/Delete_Virtual_Machines.adoc[]
+include::topics/delete_vm.adoc[]
 
 
 :leveloffset: 2
@@ -230,13 +222,13 @@ include::topics/Delete_Virtual_Machines.adoc[]
 This section provides examples of how to interact with service templates. 
 
 :leveloffset: 3
-include::topics/Edit_a_Service_Template.adoc[]
+include::topics/edit_service_template.adoc[]
 
 
 :leveloffset: 3
-include::topics/Edit_Multiple_Service_Templates.adoc[]
+include::topics/edit_service_templates.adoc[]
 
 
 :leveloffset: 3
-include::topics/Delete_Multiple_Service_Templates.adoc[]
+include::topics/delete_service_templates.adoc[]
 
