--- a/doc-Red_Hat_CloudForms_REST_API/chap-Examples.adoc
+++ b/doc-Red_Hat_CloudForms_REST_API/chap-Examples.adoc
@@ -1,13 +1,13 @@
 [[_chap_examples]]
 = Examples
 
-This section provides a collection of examples of using the REST API to interact with resources in a Red Hat CloudForms environment. 
+This section provides a collection of examples of using the REST API to interact with resources in a Red Hat CloudForms environment.
 
 :leveloffset: 2
 [[_sect_general_queries]]
 = General Queries
 
-This section introduces a number of general examples of how to use the REST API to query resources, and return information about resources and events. 
+This section introduces a number of general examples of how to use the REST API to query resources, and return information about resources and events.
 
 :leveloffset: 3
 include::topics/Queries.adoc[]
@@ -25,7 +25,7 @@ include::topics/Querying_a_Delete_Task.adoc[]
 [[_sect_service_catalogs]]
 = Service Catalogs
 
-This section provides examples of how to interact with service catalogs. 
+This section provides examples of how to interact with service catalogs.
 
 :leveloffset: 3
 include::topics/add_service_catalog.adoc[]
@@ -48,11 +48,11 @@ include::topics/edit_service_catalogs.adoc[]
 
 
 :leveloffset: 3
-include::topics/Order_a_Service_from_a_Service_Catalog.adoc[]
+include::topics/order_service.adoc[]
 
 
 :leveloffset: 3
-include::topics/Order_Multiple_Services_from_a_Service_Catalog.adoc[]
+include::topics/order_services.adoc[]
 
 
 :leveloffset: 3
@@ -67,7 +67,7 @@ include::topics/delete_service_catalogs.adoc[]
 [[_sect_tags]]
 = Tags
 
-This section provides examples of how to interact with tags. 
+This section provides examples of how to interact with tags.
 
 :leveloffset: 3
 include::topics/assign_tags.adoc[]
@@ -82,7 +82,7 @@ include::topics/Assign_a_Tag_by_Reference_to_a_Service.adoc[]
 
 
 :leveloffset: 3
-include::topics/assign_tags_to_service_template.adoc[] 
+include::topics/assign_tags_to_service_template.adoc[]
 
 :leveloffset: 3
 include::topics/unassign_tags.adoc[]
@@ -96,14 +96,14 @@ include::topics/unassign_tags_from_service_template.adoc[]
 [[_sect_automation_requests]]
 = Automation Requests
 
-This section provides examples of how to interact with automation requests. 
+This section provides examples of how to interact with automation requests.
 
 
 :leveloffset: 2
 [[_sect_provisioning_requests]]
 = Provisioning Requests
 
-This section provides examples of how to interact with provisioning requests. 
+This section provides examples of how to interact with provisioning requests.
 
 :leveloffset: 3
 include::topics/automation_request.adoc[]
@@ -116,7 +116,7 @@ include::topics/automation_requests.adoc[]
 [[_sect_providers]]
 = Providers
 
-This section provides examples of how to interact with providers. 
+This section provides examples of how to interact with providers.
 
 :leveloffset: 3
 include::topics/create_provider.adoc[]
@@ -146,7 +146,7 @@ include::topics/Deleting_Multiple_Providers.adoc[]
 [[_sect_services]]
 = Services
 
-This section provides examples of how to interact with services. 
+This section provides examples of how to interact with services.
 
 :leveloffset: 3
 include::topics/edit_service.adoc[]
@@ -181,7 +181,7 @@ include::topics/delete_services.adoc[]
 [[_sect_virtual_machines]]
 = Virtual Machines
 
-This section provides examples of how to interact with virtual machines. 
+This section provides examples of how to interact with virtual machines.
 
 :leveloffset: 3
 include::topics/scan_vm.adoc[]
@@ -219,7 +219,7 @@ include::topics/delete_vm.adoc[]
 [[_sect_service_templates]]
 = Service Templates
 
-This section provides examples of how to interact with service templates. 
+This section provides examples of how to interact with service templates.
 
 :leveloffset: 3
 include::topics/edit_service_template.adoc[]
@@ -231,4 +231,3 @@ include::topics/edit_service_templates.adoc[]
 
 :leveloffset: 3
 include::topics/delete_service_templates.adoc[]
-
