Updated the Managing Providers guide to match the new UI; also appropriately marked up all GUI labels and buttons.

--- a/doc-Managing_Providers/Datastores.adoc
+++ b/doc-Managing_Providers/Datastores.adoc
@@ -7,7 +7,7 @@ Datastores connected to a provider are automatically created on discovery.
 On creation of a repository, a datastore is automatically created. 
 
 
-image::images/2234.png[]
+image::images/datastores.png[]
 
 After detecting datastores, you might want to examine them more closely to see virtual machines, hosts, and available space. 
 
