--- a/doc-Managing_Providers/topics/Adding_Amazon_EC2_Providers.adoc
+++ b/doc-Managing_Providers/topics/Adding_Amazon_EC2_Providers.adoc
@@ -6,10 +6,10 @@ After initial installation and creation of a CloudForms Management Engine enviro
 . Navigate to menu:Clouds[Providers]. 
 . Click  image:images/1847.png[] btn:[(Configuration)], then click  image:images/1848.png[] btn:[(Add a New Cloud Provider)]. 
 . Enter a [label]#Name# for the provider. 
-. From the [label]#Type# drop down menu select [label]#Amazon EC2#. 
+. From the [label]#Type# list select [label]#Amazon EC2#. 
 . Select an [label]#Amazon Region#. 
 . Select the appropriate [label]#Zone# if you have more than one available. 
 . Generate an [label]#Access Key# in the [label]#Security Credentials# of your Amazon AWS account.
   The [label]#Access Key ID# acts as your [label]#User ID#, and your [label]#Secret Access Key# acts as your [label]#Password#. 
-. Click [label]#Validate# to validate the credentials. 
-. Click [label]#Add#. 
+. Click btn:[Validate] to validate the credentials. 
+. Click btn:[Add]. 
