--- a/doc-Managing_Providers/topics/Adding_Azure_Providers.adoc
+++ b/doc-Managing_Providers/topics/Adding_Azure_Providers.adoc
@@ -21,6 +21,6 @@ After a service principal account has been created in Azure, the following three
 . Select a region from the [label]#Region# list.
 . Enter [label]#Tenant ID#.
 . Enter [label]#Zone#.
-. In the Credentials section, enter the Client ID and Client Key; click [label]#Validate#.
-. Click [label]#Add#.
+. In the Credentials section, enter the Client ID and Client Key; click btn:[Validate].
+. Click btn:[Add].
 
