--- a/doc-Managing_Providers/topics/Adding_a_Microsoft_System_Center_Virtual_Machine_Manager_Provider.adoc
+++ b/doc-Managing_Providers/topics/Adding_a_Microsoft_System_Center_Virtual_Machine_Manager_Provider.adoc
@@ -7,23 +7,24 @@ After initial installation and creation of a CloudForms Management Engine enviro
 . Enter the [label]#Name# of the provider to add.
   The [label]#Name# is how the device is labeled in the console. 
 . Select [label]#Microsoft System Center VMM# from the [label]#Type# list. 
-. Enter the [label]#Host Name (or IPv4 or IPv6 address)# of the provider. 
+. Enter the [label]#Host Name or IP address(IPv4 or IPv6)# of the provider. 
 +
 IMPORTANT: The [label]#Host Name# must use a unique fully qualified domain name. 
 
 . Select [label]#Kerberos# or [label]#Basic (SSL)# from the [label]#Security Protocol# list.
   The default security protocol is Kerberos. 
-. If you selected [label]#Kerberos# as the security protocol, enter the [label]#Realm# to which the Microsoft System Center Virtual Machine Manager belongs: for example, www.example.com. 
+. If you select [label]#Kerberos# as the security protocol, enter the [label]#Realm# to which the Microsoft System Center Virtual Machine Manager belongs: for example, www.example.com. 
 . Select the appropriate [label]#Zone# for the provider.
   By default, the zone is set to [label]#default#. 
 . In the [label]#Credentials# area, under [label]#Default#, provide the login credentials required for the Microsoft System Center Virtual Machine Manager administrative user: 
 +
-* Enter the user name in the [label]#User ID# field. 
+* Enter the user name in the [label]#Username# field. 
 +
 NOTE: A user name under the Kerberos security protocol must be in the format name@realm. 
 
-* Enter the user password in the [label]#Password# field. 
-* Confirm the user password in the [label]#Verify Password# field. 
-* Click [label]#Validate# to confirm that the CloudForms Management Engine can connect to the Microsoft System Center Virtual Machine Manager using the user name and password. 
+* Enter the password in the [label]#Password# field. 
+* Confirm the password in the [label]#Confirm Password# field. 
+* Click btn:[Validate] to confirm CFME can connect to the Microsoft System Center Virtual Machine Manager. 
 
-. Click [label]#Save#. 
+. Click btn:[Add].
+
