--- a/doc-Managing_Providers/topics/Adding_a_Red_Hat_Enterprise_Virtualization_Manager_Provider.adoc
+++ b/doc-Managing_Providers/topics/Adding_a_Red_Hat_Enterprise_Virtualization_Manager_Provider.adoc
@@ -7,7 +7,7 @@ After initial installation and creation of a CloudForms Management Engine enviro
 . Enter the [label]#Name# of the provider to add.
   The [label]#Name# is how the device is labeled in the console. 
 . Select [label]#Red Hat Enterprise Virtualization Manager# from the [label]#Type# list. 
-. Enter the [label]#Host Name (or IPv4 or IPv6 address)# of the provider. 
+. Enter the [label]#Host Name or IP address(IPv4 or IPv6)# of the provider. 
 +
 IMPORTANT: The [label]#Host Name# must use a unique fully qualified domain name. 
 
@@ -16,12 +16,12 @@ IMPORTANT: The [label]#Host Name# must use a unique fully qualified domain name.
   By default, the zone is set to [label]#default#. 
 . In the [label]#Credentials# area, under [label]#Default#, provide the login credentials required for the Red Hat Enterprise Virtualization Manager administrative user: 
 +
-* Enter the user name, [userinput]#admin@internal#, in the [label]#User ID# field. 
-* Enter the user password in the [label]#Password# field. 
-* Confirm the user password in the [label]#Verify Password# field. 
-* Click [label]#Validate# to confirm that the CloudForms Management Engine can connect to the Manager using the user name and password. 
+* Enter the user name, [userinput]#admin@internal#, in the [label]#Username# field. 
+* Enter the password in the [label]#Password# field. 
+* Confirm the password in the [label]#Confirm Password# field. 
+* Click btn:[Validate] to confirm CFME can connect to the Red Hat Enterprise Virtualization Manager. 
 
-. In the [label]#Credentials# area, under [label]#C & U Database#, provide the login credentials for the CloudForms user of the Red Hat Enterprise Virtualization Data Warehouse database: 
+. Under [label]#C & U Database# tab, provide the login credentials for the CloudForms user of the Red Hat Enterprise Virtualization Data Warehouse database: 
 +
 [NOTE]
 ====
@@ -31,9 +31,10 @@ To create the user, see section "Data Collection for Red Hat Enterprise Virtuali
 For information on setting up the Data Warehouse service on the Manager, see the Red Hat Enterprise Virtualization Installation Guide. 
 ====
 +
-* Enter the database user name in the [label]#User ID# field. 
+* Enter the database user name in the [label]#Username# field. 
 * Enter the user password in the [label]#Password# field. 
-* Confirm the user password in the [label]#Verify Password# field. 
-* Click [label]#Validate# to confirm that the CloudForms Management Engine can connect to the database using the user name and password. 
+* Confirm the user password in the [label]#Confirm Password# field. 
+* Click btn:[Validate] to confirm CFME can connect to the database. 
 
-. Click [label]#Save#. 
+. Click btn:[Save].
+
