--- a/doc-Managing_Providers/topics/Adding_a_VMware_vCenter_Provider.adoc
+++ b/doc-Managing_Providers/topics/Adding_a_VMware_vCenter_Provider.adoc
@@ -7,7 +7,7 @@ After initial installation and creation of a CloudForms Management Engine enviro
 . Enter the [label]#Name# of the provider to add.
   The [label]#Name# is how the device is labeled in the console. 
 . Select [label]#VMware vCenter# from the [label]#Type# list. 
-. Enter the [label]#Host Name (or IPv4 or IPv6 address)# of the provider. 
+. Enter the [label]#Host Name or IP address(IPv4 or IPv6)# of the provider. 
 +
 IMPORTANT: The [label]#Host Name# must use a unique fully qualified domain name. 
 
@@ -15,9 +15,9 @@ IMPORTANT: The [label]#Host Name# must use a unique fully qualified domain name.
   By default, the zone is set to [label]#default#. 
 . In the [label]#Credentials# area, under [label]#Default#, provide the login credentials required for the VMware vCenter administrative user: 
 +
-* Enter the user name in the [label]#User ID# field. 
-* Enter the user password in the [label]#Password# field. 
-* Confirm the user password in the [label]#Verify Password# field. 
-* Click [label]#Validate# to confirm that the CloudForms Management Engine can connect to the VMware vCenter using the user name and password. 
+* Enter the user name in the [label]#Username# field. 
+* Enter the password in the [label]#Password# field. 
+* Confirm the password in the [label]#Confirm Password# field. 
+* Click btn:[Validate] to confirm CFME can connect to the VMware vCenter. 
 
-. Click [label]#Save#. 
+. Click btn:[Add]. 
