--- a/doc-Managing_Providers/topics/Adding_an_OpenStack_Infrastructure_Provider.adoc
+++ b/doc-Managing_Providers/topics/Adding_an_OpenStack_Infrastructure_Provider.adoc
@@ -6,13 +6,13 @@ After initial installation and creation of a CloudForms Management Engine enviro
 . Click  image:images/1847.png[] btn:[(Configuration)], then click  image:images/1848.png[]btn:[(Add a New Infrastructure Provider)]. 
 . Enter the [label]#Name# of the provider to add.
   The [label]#Name# is how the device is labeled in the console. 
-. Select [label]#OpenStack Infrastructure# from the [label]#Type# list. 
-. Enter the [label]#Host Name (or IPv4 or IPv6 address)# of the provider. 
+. Select [label]#OpenStack Platform Director# from the [label]#Type# list. 
+. Enter the [label]#Host Name or IP address(IPv4 or IPv6)# of the provider. 
 +
 IMPORTANT: The [label]#Host Name# must use a unique fully qualified domain name. 
 
-. Enter the [label]#API Port# of your Keystone service.
-  The default port is [literal]+5000+. 
+. Select the [label]#API Version# of your Keystone service from the list. The default is [literal]+Keystone v2+.
+   
 +
 IMPORTANT: If the Keystone service is configured to use SSL, you must enter the SSL port for Keystone. 
 
@@ -20,24 +20,24 @@ IMPORTANT: If the Keystone service is configured to use SSL, you must enter the 
   By default, the zone is set to [label]#default#. 
 . In the [label]#Credentials# area, under [label]#Default#, provide the login credentials required for the OpenStack Infrastructure administrative user: 
 +
-* Enter the user name in the [label]#User ID# field. 
-* Enter the user password in the [label]#Password# field. 
-* Confirm the user password in the [label]#Verify Password# field. 
-* Click [label]#Validate# to confirm that the CloudForms Management Engine can connect to the OpenStack Infrastructure instance using the user name and password. 
+* Enter the user name in the [label]#Username# field. 
+* Enter the password in the [label]#Password# field. 
+* Confirm the user password in the [label]#Confirm Password# field. 
+* Click btn:[Validate] to confirm that the CloudForms Management Engine can connect to the OpenStack Infrastructure instance using the user name and password. 
 
-. In the [label]#Credentials# area, under [label]#AMQP#, provide the login credentials required for the Advanced Message Queuing Protocol messaging service: 
+. Under [label]#AMQP#, provide the login credentials required for the Advanced Message Queuing Protocol messaging service: 
 +
-* Enter the administrative user name in the [label]#User ID# field. 
+* Enter the administrative user name in the [label]#Username# field. 
 * Enter the user password in the [label]#Password# field. 
-* Confirm the user password in the [label]#Verify Password# field. 
-* Click [label]#Validate# to confirm that the CloudForms Management Engine can connect to the messaging service using the user name and password. 
+* Confirm the user password in the [label]#Confirm Password# field. 
+* Click btn:[Validate] to confirm CFME can connect to the messaging service. 
 
-. In the [label]#Credentials# area, under [label]#RSA key pair#, provide the user name and private key required to connect via SSH to all hosts in the provider: 
+. Under [label]#RSA key pair#, provide the user name and private key required to connect via SSH to all hosts in the provider: 
 +
-* Enter the administrative user name in the [label]#User ID# field. 
+* Enter the administrative user name in the [label]#Username# field. 
 * Enter the private key from the machine on which OpenStack was deployed in the [label]#Private Key# field. 
 
-. Click [label]#Save#. 
+. Click btn:[Add]. 
 
 NOTE: CloudForms Management Engine requires that the adminURL endpoint for all OpenStack services be on a non-private network.
 Accordingly, assign the adminURL endpoint an IP address of something other than [literal]+192.168.x.x+.
