--- a/doc-Managing_Providers/topics/Authenticating_VMware_vCenter_Hosts.adoc
+++ b/doc-Managing_Providers/topics/Authenticating_VMware_vCenter_Hosts.adoc
@@ -8,13 +8,15 @@ The procedure below describes how to authenticate the VMware vCenter hosts.
 . Select the hosts to authenticate.
   You can select all hosts using the [label]#Check All# option. 
 . Click  image:images/1847.png[] btn:[(Configuration)]			
-. Click  image:images/1851.png[] btn:[(Edit Selected Hosts)]. 
-. On the [label]#Credentials# screen, provide your VMware ESXi log on credentials. 
-. If editing multiple hosts, select a host from the [label]#Select Host to validate against# drop down. 
-. Click [label]#Save#. 
-
-.Result:
-For all hosts selected, the authentication status in the bottom right quadrant changes from a question mark into a tick mark indicating a successful validated connection. 
+. Click  image:images/1851.png[] btn:[(Edit Selected items)].
+. In the [label]#Credentials# area, under [label]#Default#, provide the VMware ESXi login credentials:
++
+* Enter the user name in the [label]#Username# field. 
+* Enter the password in the [label]#Password# field. 
+* Confirm the password in the [label]#Confirm Password# field. 
+* Click btn:[Validate] to confirm CFME can connect to the VMware vCenter host. 
+. If editing multiple hosts, select a host from the [label]#Select Host to validate against# list; provide the VMware ESXi login credentials and click btn:[Validate].
+. Click btn:[Save].
 
 == Using a Non-Administrator Account for Host Credentials
 
