--- a/doc-Managing_Providers/topics/Discovering_Amazon_EC2_Cloud_Providers.adoc
+++ b/doc-Managing_Providers/topics/Discovering_Amazon_EC2_Cloud_Providers.adoc
@@ -7,7 +7,5 @@ CloudForms Management Engine provides the ability to discover cloud providers as
 . Select Amazon EC2 from the [label]#Discover Type# list.
 . Enter your Amazon EC2 [label]#User ID# and [label]#Password#.
   Reenter your password in the [label]#Verify Password# field.
-. Click [label]#Start#.
+. Click btn:[Start].
 
-.Result:
-The Amazon EC2 providers discovery begins.
