--- a/doc-Managing_Providers/topics/Discovering_Multiple_Management_Systems.adoc
+++ b/doc-Managing_Providers/topics/Discovering_Multiple_Management_Systems.adoc
@@ -10,7 +10,7 @@ Providers must be running in order for the appliance to discover them.
 . Select the types of provider to discover. 
 +
 
-image::images/2195.png[]
+image::images/discover-providers.png[]
 +
 * To authenticate to Red Hat Enterprise Virtualization hosts see <<_authenticating_red_hat_enterprise_virtualization_hosts,Authenticating Red Hat Enterprise Virtualization Hosts>>. 
 * To authenticate to VMware vCenter hosts see <<_authenticating_vmware_vcenter_hosts,Authenticating VMware vCenter Hosts>>. 
@@ -21,10 +21,5 @@ image::images/2195.png[]
 
 image::images/2196.png[]
 
-. Click [label]#Start#. 
+. Click btn:[Start].
 
-.Result:
-The server searches for computers running supported providers.
-When available, the new providers display.
-These providers are named using a Hostname and IP address.
-To make them identifiable, edit the basic information for each provider. 
