--- a/doc-Managing_Providers/topics/Refreshing_Multiple_Management_Systems.adoc
+++ b/doc-Managing_Providers/topics/Refreshing_Multiple_Management_Systems.adoc
@@ -9,4 +9,5 @@ If the providers were added using [label]#Discovery#, add credentials using  ima
 . Navigate to menu:Infrastructure[Providers]. 
 . Select the providers to refresh. 
 . Click  image:images/1847.png[] btn:[(Configuration)], and then  image:images/2003.png[] btn:[(Refresh Relationships and Power States)]. 
-. Click [label]#OK#. 
+. Click btn:[OK].
+
