--- a/doc-Managing_Providers/topics/Reviewing_a_Management_System.adoc
+++ b/doc-Managing_Providers/topics/Reviewing_a_Management_System.adoc
@@ -5,10 +5,9 @@ From a list of providers, you can review a specific provider by clicking on it.
 This displays various options to access provider information. 
 
 .Provider Management Screen
-image::images/2197.png[]
+image::images/providers-summary-new.png[]
 
 . Provider Taskbar: Choose between Configuration, Policy and Monitoring options for the selected provider 
 . Provider Summary: Displays provider summary such as Properties, Relationships, and Smart Management 
-. Provider Summary View: Choose between graphical or text view of the provider summary 
 . Provider Summary PDF: Generates provider summary in PDF format 
 . Provider Accordion: Displays details about Properties and Relationships for the selected provider 
