--- a/doc-Managing_Providers/topics/Tagging_Cloud_Providers.adoc
+++ b/doc-Managing_Providers/topics/Tagging_Cloud_Providers.adoc
@@ -7,10 +7,11 @@ Before assigning tags, create them using instructions in the _CloudForms Managem
 . Navigate to menu:Clouds[Providers]. 
 . Select the checkboxes for the Cloud Providers to tag. 
 . Click  image:images/1941.png[] btn:[(Policy)], and then  image:images/2158.png[] btn:[(Edit Tags)]. 
-. Select a customer tag to assign from the dropdown menu. 
+. [label]#Select a customer tag to assign# from the first list. 
 +
 
 image::images/2219.png[]
 
-. Select a value to assign. 
-. Click [label]#Save#. 
+. Select a value to assign from the second list. 
+. Click btn:[Save].
+
