--- a/doc-Managing_Providers/topics/Viewing_Hosts_and_Clusters.adoc
+++ b/doc-Managing_Providers/topics/Viewing_Hosts_and_Clusters.adoc
@@ -4,11 +4,8 @@ Access a tree view of the hosts and clusters for a provider from the [label]#Pro
 
 . Navigate to menu:Infrastructure[Providers]. 
 . Click the provider to view the hosts and clusters. 
-. Click on the [label]#Relationships# accordion, then click [label]#Hosts & Clusters#. 
+. Click on the [label]#Relationships# accordion, then click [label]#'Hosts & Clusters'#. 
 
 
 image::images/2201.png[]
 
-.Result:
-The hosts and clusters are displayed in a tree view.
-Hover over a host or virtual machines and its virtual thumbnail displays on the screen. 
