--- a/doc-Managing_Providers/topics/Viewing_a_Cloud_Providers_Timeline.adoc
+++ b/doc-Managing_Providers/topics/Viewing_a_Cloud_Providers_Timeline.adoc
@@ -9,16 +9,11 @@ View the timeline of events for instances registered to a cloud provider.
 . From [label]#Options#, customize the period of time to display and the types of events to see. 
 +
 * Use [label]#Show# to select regular Management Events or Policy Events. 
-* Use the [label]#Type# dropdown to select hourly or daily data points. 
+* Use the [label]#Type# list to select hourly or daily data points. 
 * Use [label]#Date# to type the date for the timeline to display. 
 * If you select to view a daily timeline, use [label]#Show# to set how many days back to go.
   The maximum history is 31 days. 
-* The three [label]#Event Group# dropdowns allow you to select different groups of events to display.
+* The three [label]#Event Groups# list allow you to select different groups of events to display.
   Each has its own color. 
-* From the [label]#Level# dropdown, select a [label]#Summary# event, or a [label]#Detail# list of events. 
+* From the [label]#Level# list, select a [label]#Summary# event, or a [label]#Detail# list of events.
 
-
-.Result:
-The timeline displays.
-To see more detail on an item in the timeline, click on it.
-A balloon appears with a link to the resource. 
