--- a/doc-Managing_Providers/topics/Adding_OpenStack_Providers.adoc
+++ b/doc-Managing_Providers/topics/Adding_OpenStack_Providers.adoc
@@ -12,31 +12,31 @@ When using the admin credentials, a user in CloudForms Management Engine provisi
 +
 IMPORTANT: The [label]#Host Name# must use a unique fully qualified domain name. 
 
-. Enter the [label]#API Port# of your Keystone service.
+. Enter the [label]#API Port# of your Keystone service. 
   The default port is [literal]+5000+. 
 +
 IMPORTANT: If the Keystone service is configured to use SSL, you must enter the SSL port for Keystone. 
 
-. Select the appropriate [label]#API Version# from the list.
+. Select the appropriate [label]#API Version# from the list. The default is [literal]+Keystone v2+. 
 . Select the appropriate [label]#Zone# for the provider.
   By default, the zone is set to [label]#default#. 
 . In the [label]#Credentials# area, under [label]#Default#, provide the login credentials required for the Keystone user: 
 +
 IMPORTANT: To enable discovery of OpenStack cloud providers, ensure that the [path]_iptables_ for the OpenStack host providing Keystone services allows port 5000 access to all hosts on the same network. 
 +
-* Enter the user name in the [label]#User ID# field. 
+* Enter the user name in the [label]#Username# field. 
 * Enter the user password in the [label]#Password# field. 
-* Confirm the user password in the [label]#Verify Password# field. 
-* Click [label]#Validate# to confirm that the CloudForms Management Engine can connect to the OpenStack Infrastructure instance using the user name and password. 
+* Confirm the user password in the [label]#Confirm Password# field. 
+* Click btn:[Validate] to confirm CFME can connect to the OpenStack Infrastructure instance. 
 
 . If AMQP credentials were changed during the OpenStack provider install, use the [label]#AMQP# tab of the [label]#Credentials# area to provide the login credentials required for the Advanced Message Queuing Protocol messaging service on your OpenStack Nova component: 
 +
-* Enter the administrative user name in the [label]#User ID# field. 
+* Enter the administrative user name in the [label]#Username# field. 
 * Enter the user password in the [label]#Password# field. 
-* Confirm the user password in the [label]#Verify Password# field. 
-* Click [label]#Validate# to confirm that the CloudForms Management Engine can connect to the messaging service using the user name and password. 
+* Confirm the user password in the [label]#Confirm Password# field. 
+* Click btn:[Validate] to confirm CFME can connect to the messaging service. 
 
-. Click [label]#Add#. 
+. Click btn:[Add]. 
 
 [NOTE]
 ======
