--- a/doc-Managing_Providers/topics/Authenticating_Red_Hat_Enterprise_Virtualization_Hosts.adoc
+++ b/doc-Managing_Providers/topics/Authenticating_Red_Hat_Enterprise_Virtualization_Hosts.adoc
@@ -8,16 +8,16 @@ After adding a Red Hat Enterprise Virtualization infrastructure provider, you mu
 . Select the hosts to authenticate.
   You can select all hosts using the [label]#Check All# option. 
 . Click  image:images/1847.png[] btn:[(Configuration)]. 
-. Click  image:images/1851.png[] btn:[(Edit Selected Hosts)]. 
+. Click  image:images/1851.png[] btn:[(Edit this item)]. 
 . In the [label]#Credentials# area, enter credentials for the following, as required:
  .. [label]#Default#: This field is mandatory. Users should have privileged access such as, root or administrator. 
  .. [label]#Remote Login#: Credentials for this field are required if SSH login is disabled for the [label]#Default# account. 
  .. [label]#Web Services#: This tab is used for access to Web Services in Red Hat Enterprise Virtuaization Manager.
  .. [label]#IPMI#:  This tab is used for access to IPMI.
-. If editing multiple hosts, select a host from the [label]#Select Host to validate against# drop down. 
-. If required, enter credentials for [label]#Remote Login#, [label]#Web Services#, and [label]#IPMI# in their respective tabs.
-  Select the host to validate each of these credentials against. 
-. Click [label]#Save#. 
+. Click btn:[Validate]. 
+. If editing multiple hosts:
+ .. Select a host from the [label]#Select Host to validate against# list. 
+ .. If required, enter credentials for [label]#Remote Login#, [label]#Web Services#, and [label]#IPMI# in their respective tabs; click btn:[Validate].
+ .. Select another host to validate each of these credentials against. 
+. Click btn:[Add].
 
-.Result:
-For all hosts selected, the authentication status in the bottom right quadrant changes from a question mark to a tick mark indicating a validated connection. 
