--- a/doc-Managing_Providers/topics/Performing_SmartState_Analysis_on_Datastores.adoc
+++ b/doc-Managing_Providers/topics/Performing_SmartState_Analysis_on_Datastores.adoc
@@ -10,6 +10,7 @@ If Capacity and Utilization roles are enabled, CloudForms Management Engine perf
 ======
 
 . Navigate to menu:Infrastructure[Datastores]. 
-. Check the datastores to analyze. 
+. Select the datastores to analyze. 
 . Click  image:images/1847.png[] btn:[(Configuration)], and then  image:images/2147.png[] btn:[(Perform SmartState Analysis)]. 
-. Click [label]#OK# to confirm the analysis of the Datastores. 
+. Click btn:[OK].
+
