--- a/doc-Managing_Providers/topics/Refreshing_Cloud_Providers.adoc
+++ b/doc-Managing_Providers/topics/Refreshing_Cloud_Providers.adoc
@@ -6,4 +6,5 @@ Ensure the chosen cloud providers have the correct credentials before refreshing
 . Navigate to menu:Clouds[Providers]. 
 . Select the checkboxes for the cloud providers to refresh. 
 . Click  image:images/1847.png[] btn:[(Configuration)], and then  image:images/2003.png[]btn:[(Refresh Relationships and Power States)]. 
-. Click [label]#OK#. 
+. Click btn:[OK].
+
