--- a/doc-Managing_Providers/topics/Removing_Cloud_Providers.adoc
+++ b/doc-Managing_Providers/topics/Removing_Cloud_Providers.adoc
@@ -5,4 +5,5 @@ A cloud provider might require removal from the VMDB if it is no longer in use.
 . Navigate to menu:Clouds[Providers]. 
 . Check the cloud providers to remove. 
 . Click  image:images/1847.png[] btn:[(Configuration)], and then  image:images/2157.png[] btn:[(Remove Cloud Providers from the VMDB)]. 
-. Click [label]#OK#. 
+. Click btn:[OK].
+
