--- a/doc-Managing_Providers/topics/Removing_a_Datastore.adoc
+++ b/doc-Managing_Providers/topics/Removing_a_Datastore.adoc
@@ -6,4 +6,5 @@ This button is enabled only if a datastore is completely empty.
 . Navigate to menu:Infrastructure[Datastores]. 
 . Click on the Datastore to remove. 
 . Click  image:images/1847.png[] btn:[(Configuration)], and then  image:images/2157.png[] btn:[(Remove Datastore from the VMDB)]. 
-. Click [label]#OK# to confirm. 
+. Click btn:[OK].
+
