--- a/doc-Managing_Providers/topics/Reviewing_a_Datastore.adoc
+++ b/doc-Managing_Providers/topics/Reviewing_a_Datastore.adoc
@@ -5,11 +5,10 @@ You can click on a specific Datastore to view its details.
 The screen provides you with a Datastore Taskbar, Virtual Thumbnail, Accordion, and Summary. 
 
 .Datastore Management Screen
-image::images/2236.png[]
+image::images/view-datastore-new.png[]
 
 . Datastore Taskbar: Choose between Configuration, Policy and Monitoring options for the selected Datastore 
 . Datastore Summary: See summary such as datastore properties, storage, VM information. 
-. Datastore Summary Views: Choose between graphical or text view of the datastore summary. 
 . Datastore PDF: Generates datastore summary in PDF format. 
 . Datastore Accordion: See details about Properties, Relationships, Storage Relationships and Content for the chosen datastore. 
 +
