--- a/doc-Managing_Providers/topics/Tagging_a_Datastore.adoc
+++ b/doc-Managing_Providers/topics/Tagging_a_Datastore.adoc
@@ -6,9 +6,10 @@ Before assigning tags, create them with instructions in the _CloudForms Manageme
 . Navigate to menu:Infrastructure[Datastores]. 
 . Click the datastore to tag. 
 . Click  image:images/1941.png[] btn:[(Policy)], and then  image:images/2158.png[] btn:[(Edit Tags)]. 
-. Select a customer tag from the first dropdown, and then a value for the tag. 
+. Select a customer tag from the first list, and then a value for the tag from the second list. 
 +
 
 image::images/2238.png[]
 
-. Select more tags or click [label]#Save# to save your changes. 
+. Select more tags or click btn:[Save] to save your changes.
+
