--- a/doc-Managing_Providers/topics/To_remove_Management_Systems.adoc
+++ b/doc-Managing_Providers/topics/To_remove_Management_Systems.adoc
@@ -11,4 +11,5 @@ Review all the dependencies carefully before deleting a provider.
 . Navigate to menu:Infrastructure[Providers]. 
 . Select the check box for the provider to delete. 
 . Click  image:images/1847.png[] btn:[(Configuration)], then  image:images/2157.png[] btn:[(Remove Infrastructure Providers from the VMDB)]. 
-. Click [label]#OK#. 
+. Click btn:[OK].
+
