--- a/doc-Managing_Providers/topics/Viewing_the_Management_System_Timeline.adoc
+++ b/doc-Managing_Providers/topics/Viewing_the_Management_System_Timeline.adoc
@@ -9,21 +9,16 @@ View the timeline of events for the virtual machines registered to a provider.
 . From [label]#Options#, customize the period of time to display and the types of events to see. 
 +
 
-image::images/2200.png[]
+image::images/provider-timeline.png[]
 +
 * Use [label]#Show# to select regular Management Events or Policy Events. 
 * Use the [label]#Interval# dropdown to select hourly or daily data points. 
 * Use [label]#Date# to type the date for the timeline to display. 
 * If you select to view a daily timeline, use [label]#Show# to set how many days back to go.
   The maximum history is 31 days. 
-* The three [label]#Event Group# dropdowns allow you to select different groups of events to display.
+* The three [label]#Event Groups# lists allow you to select different groups of events to display.
   Each has its own color. 
-* From the [label]#Level# dropdown, select a [label]#Summary# event, or a [label]#Detail# list of events.
+* From the [label]#Level# list, select a [label]#Summary# event, or a [label]#Detail# list of events.
   For example, the detail level of a [label]#Power On# event might include the power on request, the starting event, and the actual [label]#Power On# event.
-  If you select [label]#Summary#, only the Power On event displays in the timeline. 
+  If you select [label]#Summary#, only the Power On event displays in the timeline.
 
-
-.Result:
-The timeline is displayed.
-To see more details about an item in the timeline, click on it.
-A balloon appears with a link to the resource. 
