edited topics in Examples chapter, formatting, etc

--- a/doc-Red_Hat_CloudForms_REST_API/topics/Querying_a_Delete_Task.adoc
+++ b/doc-Red_Hat_CloudForms_REST_API/topics/Querying_a_Delete_Task.adoc
@@ -1,14 +1,15 @@
+[[query-a-delete-task]]
 = Querying a Delete Task
 
-Request: 
+==== Request:
 
 ----
 GET /api/tasks/625
 ----
 
-Response: 
+==== Response:
 
-[source]
+[source,json]
 ----
 {
   "href": "https://hostname/api/tasks/625",
