More container edits

--- a/doc-Containers/Containers_Providers.adoc
+++ b/doc-Containers/Containers_Providers.adoc
@@ -2,7 +2,7 @@
 
 A containers provider is a service that manages container resources.
 
-The +Containers+ area in the top menu bar has options to add and manage containers providers. The +Providers+ page in the +Containers+ area displays all discovered or added containers providers.
+The +Containers+ area in the top menu bar has options to add and manage containers providers. The +Containers+ area includes the +Providers+ page, which displays all discovered or added containers providers.
 
 The supported containers provider types that you can add in CloudForms Management Engine are:
 
@@ -75,7 +75,7 @@ Now it is possible to use the token to add a containers provider in CloudForms M
 :leveloffset: 2
 = Configuring OpenShift Metrics
 
-To collect the `nodes`, `pods`, and `containers` metrics, it is required to run the OpenShift Metrics services inside your cluster. For more information, see the https://github.com/openshift/origin-metrics[OpenShift Metrics Documentation].
+To collect the `nodes`, `pods`, and `containers` metrics, it is required to run the OpenShift Metrics services inside your cluster. For more information, see the https://access.redhat.com/documentation/en/openshift-enterprise/3.1/installation-and-configuration/chapter-15-enabling-cluster-metrics[OpenShift Enterprise Metrics Documentation].
 
 NOTE: Use the OpenShift master public host name as the `HAWKULAR_METRICS_HOSTNAME`, at the moment a limitation in CloudForms Management Engine is assuming that the provider *Host Name* is used also to collect the metrics.
 
