--- a/doc-Containers/Managing_Containers.adoc
+++ b/doc-Containers/Managing_Containers.adoc
@@ -35,13 +35,13 @@ CloudForms Management Engine can connect to OpenShift and Atomic Enterprise Plat
 When CloudForms Management Engine connects to a containers provider, it collects information on different areas of the provider environment:
 
 * Entities such as pods, nodes, or services.
-* Basic relationships between the entities, such as: Which services are serving which pods?
-* Advanced insight into relationships, such as: Which two different containers are using the same image?
+* Basic relationships between the entities, for example: Which services are serving which pods?
+* Advanced insight into relationships, for example: Which two different containers are using the same image?
 * Additional information, such as services, events, projects, namespaces, routes (OpenShift only), and metrics.
 
 === Cross-Providers Insight
 
-Cross providers insight is a feature that connects all layers of infrastructure, cloud, and containers known to CloudForms Management Engine and collects data for analysis.
+Cross-providers insight is a feature that connects all layers of infrastructure, cloud, and containers known to CloudForms Management Engine and collects data for analysis.
 
 It supports cross-linking with the following environments:
 
@@ -49,17 +49,25 @@ It supports cross-linking with the following environments:
 * oVirt or RHEV
 * VMware vCenter
 
-The collected data includes information on traffic, storage, and so on. The information on providers and entities is summarized on the +Overview+ page available from menu:Containers[Overview].
+The collected data includes information on traffic, storage, and so on.
+
+=== Working with the Containers Overview Page
+
+The information on all containers providers and entities known to CloudForms Management Engine is summarized on the Containers +Overview+ page. The +Overview+ page provides links to other summary pages which contain further information on the containers providers and entities.
 
 [caption="Containers Overview"]
 image::containers-overview.png[Containers Overview, height=460]
+
+.Working with the Containers Overview Page
+. Navigate to menu:Containers[Overview]. 
+. Click the desired containers provider or entity for viewing the summary with further information.
 
 === Viewing a Containers Provider Summary
 
 A +Containers Provider+ summary page allows you to view information on different aspects of a containers provider, for example:
 
 * Status of the provider and its components.
-* Relationships between different entities of the containers provider. These are summarized in the +Relationships+ box on the right-hand side of the summary page.
+* Relationships between different entities of the containers provider. These relationships are summarized in the +Relationships+ box on the right-hand side of the summary page.
 +
 [caption="Entity Relationships"]
 image::entity-relationships.png[Entity Relationships, height=460]
@@ -74,9 +82,9 @@ image::entity-relationships.png[Entity Relationships, height=460]
 
 A +Container Node+ summary page allows you to view information on different aspects of a container node, for example:
 
-* What are the versions of the underlying operating system and software?
 * How many entities are on a node?
 * What is the capacity and utilization?
+* What are the versions of the underlying operating system and software?
 
 .Viewing a Container Nodes Summary
 . Navigate to menu:Containers[Providers]. 
@@ -176,7 +184,7 @@ Perform a SmartState Analysis of a container image to inspect the packages inclu
 .Running a SmartState Analysis
 . Navigate to menu:Containers[Container Images].
 . Check the container image to analyze. You can check multiple images.
-. Click  image:images/1847.png[] btn:[(Configuration)], and then  image:images/2147.png[] btn:[(Perform SmartState Analysis)].
-
+. Click  image:images/1847.png[] btn:[Configuration], and then  image:images/2147.png[] btn:[Perform SmartState Analysis].
++
 The container image is scanned. The process will copy over any required files and install any required packages for the image. After reloading the image page, all new or updated packages are listed.
 
