--- a/doc-Containers/topics/Adding_an_OpenShift_Provider.adoc
+++ b/doc-Containers/topics/Adding_an_OpenShift_Provider.adoc
@@ -2,11 +2,13 @@
 
 After initial installation and creation of a CloudForms Management Engine environment and configuration of an OpenShift cluster service account, add an OpenShift provider by following the procedure below.
 
+For information on how to configure an OpenShift cluster service account, see <<Configuring Service Accounts>>.
+
 .Procedure: To Add an OpenShift Provider
 . Navigate to menu:Containers[Providers]. 
-. Click  image:images/1847.png[] btn:[(Configuration)], then click  image:images/1848.png[] btn:[(Add a New Containers Provider)]. 
+. Click  image:images/1847.png[] btn:[Configuration], then click  image:images/1848.png[] btn:[Add a New Containers Provider]. 
 . Enter a [label]#Name# for the provider. 
-. From the [label]#Type# drop down menu select [label]#OpenShift#. 
+. From the [label]#Type# drop-down menu select [label]#OpenShift#. 
 . Enter the [label]#Hostname or IP address# of the provider. 
 +
 IMPORTANT: The [label]#Hostname# must use a unique fully qualified domain name. 
@@ -16,6 +18,6 @@ IMPORTANT: The [label]#Hostname# must use a unique fully qualified domain name.
 . Select the appropriate [label]#Zone# for the provider.
   By default, the zone is set to [label]#default#. 
 . Under #Credentials#, enter the token in the [label]#Token# field. 
-* Click btn:[(Validate)] to confirm that the CloudForms Management Engine can connect to the OpenShift provider using the provided token. 
-. Click btn:[(Add)]. 
+* Click btn:[Validate] to confirm that the CloudForms Management Engine can connect to the OpenShift provider using the provided token. 
+. Click btn:[Add]. 
 
