--- a/doc-Containers/topics/Editing_a_Containers_Provider.adoc
+++ b/doc-Containers/topics/Editing_a_Containers_Provider.adoc
@@ -5,7 +5,7 @@ Edit information about a provider such as the name, hostname or IP address, and 
 .Procedure: To Edit a Containers Provider
 . Navigate to menu:Containers[Providers]. 
 . Click the containers provider to edit. 
-. Click  image:images/1847.png[] btn:[(Configuration)], and then  image:images/1851.png[]btn:[(Edit Selected Containers Provider)]. 
+. Click  image:images/1847.png[] btn:[Configuration], and then  image:images/1851.png[]btn:[Edit Selected Containers Provider].
 . Edit the [label]#Basic Information#.
   This varies depending on the [label]#Type# of provider. 
 +
@@ -14,5 +14,5 @@ To use a different containers provider, create a new one.
 +
 . Edit the [label]#Credentials# by typing in a new [label]#Token#. 
 . Click [label]#Validate# and wait for notification of successful validation. 
-. Click btn:[(Save)]. 
+. Click btn:[Save].
 
