--- a/doc-Containers/topics/Removing_Containers_Providers.adoc
+++ b/doc-Containers/topics/Removing_Containers_Providers.adoc
@@ -4,7 +4,7 @@ A containers provider might require removal from the VMDB if it is no longer in 
 
 .Procedure: To Remove Containers Providers
 . Navigate to menu:Containers[Providers]. 
-. Select the checkboxes for the Containers Providers to remove. 
-. Click  image:images/1847.png[] btn:[(Configuration)], and then  image:images/2157.png[] btn:[(Remove Containers Providers from the VMDB)]. 
-. Click btn:[(OK)]. 
+. Select the checkboxes for the containers providers to remove. 
+. Click  image:images/1847.png[] btn:[Configuration], and then  image:images/2157.png[] btn:[Remove Containers Providers from the VMDB].
+. Click btn:[OK].
 
