--- a/doc-Containers/topics/Viewing_a_Containers_Providers_Timeline.adoc
+++ b/doc-Containers/topics/Viewing_a_Containers_Providers_Timeline.adoc
@@ -5,7 +5,7 @@ View the timeline of events for instances registered to a containers provider.
 .Procedure: To View a Containers Provider's Timeline
 . Navigate to menu:Containers[Providers]. 
 . Click the desired containers provider for viewing the timeline. 
-. Click  image:images/1994.png[] btn:[(Monitoring)], and then  image:images/1995.png[] btn:[(Timelines)]. 
+. Click  image:images/1994.png[] btn:[Monitoring], and then  image:images/1995.png[] btn:[Timelines]. 
 . From [label]#Options#, customize the period of time to display and the types of events to see. 
 * Use [label]#Show# to select regular Management Events or Policy Events. 
 * Use the [label]#Interval# dropdown to select hourly or daily data points. 
