--- a/doc-Containers/topics/Tagging_Containers_Providers.adoc
+++ b/doc-Containers/topics/Tagging_Containers_Providers.adoc
@@ -5,12 +5,12 @@ Before assigning tags, create them using instructions in the _Red Hat CloudForms
 
 .Procedure: To Tag Containers Providers
 . Navigate to menu:Containers[Providers]. 
-. Select the checkboxes for the Containers Providers to tag. 
-. Click  image:images/1941.png[] btn:[(Policy)], and then  image:images/2158.png[] btn:[(Edit Tags)]. 
-. Select a customer tag to assign from the dropdown menu. 
+. Select the checkboxes for the containers providers to tag. 
+. Click  image:images/1941.png[] btn:[Policy], and then  image:images/2158.png[] btn:[Edit Tags]. 
+. Select a customer tag to assign from the drop-down menu. 
 +
 image::images/2219.png[]
 +
 . Select a value to assign. 
-. Click btn:[(Save)]. 
+. Click btn:[Save]. 
 
